--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,8 @@
     "angular-datepicker": "^2.0.3",
     "moment": "^2.18.1",
     "angular-moment-picker": "moment-picker#^0.9.10",
-    "iCheck": "icheck#^1.0.2"
+    "iCheck": "icheck#^1.0.2",
+    "sweetalert2": "^6.5.5",
+    "ngSweetAlert2": "angular-sweetalert-2#^2.1.1"
   }
 }
