Vou testar agora usar um objeto caixa para trabalhar no caixa_create e uniformizar o funcionamento com o caixa edit

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.4.9",
     "mongoose-currency": "^0.2.0",
     "mongoose-deep-populate": "^3.0.0",
+    "mongoose-timezone": "^1.1.0",
     "morgan": "^1.7.0",
     "multer": "^1.1.0",
     "passport": "^0.3.2",
